# BruhBruh

./: .gitignore  .ignore  CMakeLists.txt
.github/workflows/: build.yml
assets/maps/: map01.txt
src/: config.hpp  game.cpp  game.hpp  main.cpp  player.cpp
src/client/: CMakeLists.txt  client_transport.hpp  game_client.cpp  game_client.hpp
src/client/entities/: CMakeLists.txt  render_player.cpp  render_player.hpp
src/client/state/: client_bullet_state.hpp  world_state.hpp
src/client/systems/: CMakeLists.txt  client_bullet_system.cpp  client_bullet_system.hpp
src/components/: CMakeLists.txt  collider.hpp  collision_components.hpp  health_component.cpp  health_component.hpp
src/core/: CMakeLists.txt  client_world_state.hpp  game.cpp  game.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  game_simulation.cpp  game_simulation.hpp  game_world.hpp
src/entities/: CMakeLists.txt  bullet_entity.cpp  bullet_entity.hpp  entity.hpp  player.cpp  player.hpp  player_render.hpp  player_state.hpp  render_player.cpp  render_player.hpp  temp_entity.hpp  temp_wall.hpp
src/network/: CMakeLists.txt  client.cpp  client.hpp  packet.hpp  platform_sockets.hpp  server.cpp  server.hpp
src/server/: CMakeLists.txt  event_bus.hpp  game_server.cpp  game_server.hpp  game_simulation.cpp  game_simulation.hpp  server_transport.hpp
src/shared/: CMakeLists.txt  events.hpp
src/systems/: CMakeLists.txt  bullet_system.cpp  bullet_system.hpp  client_bullet_system.cpp  client_bullet_system.hpp  collision_system.cpp  collision_system.hpp  damage_system.cpp  (+1 more)
(+14 files in other folders)
